Offcanvas menu-content gap and cursor fix

--- a/src/components/Offcanvas/offcanvas.scss
+++ b/src/components/Offcanvas/offcanvas.scss
@@ -1,4 +1,5 @@
 @import "variables";
+@import "~bootstrap/scss/_mixins";
 
 // TODO: clean this mess up
 
@@ -9,38 +10,33 @@
 .trigger > i {
   transition: opacity $tr1, transform $tr2, background $tr2, color $tr2, box-shadow $tr3;
 }
+
 // usage of z-index in component CSS is not advised
+// think about stacking contexts
 // layers be like:
-
 .offcanvas {
-  //base layer, below everything else
   z-index: 0;
-
   .content {
-    // all the content
-    z-index: 500;
-  }
-
-  .overlay {
-    // an opaque clickshield above the content, all components use this
     z-index: 1000;
-  }
 
-  .content-raised {
-    // components should use this class whenever an item should be highlighted
-    // like: modals, active inputs etc.
-    // the .content-overlay is set to .visible and the active content is
-    // given the class .content-raised
-    z-index: 2000;
-  }
+    // NOTE: .overlay and .content-raised are in a new stacking context
+    .overlay {
+      // an opaque clickshield above the content, all components use this
+      z-index: 1000;
+    }
+    .content-raised {
+      // components should use this class whenever an item should be highlighted
+      // like: modals, active inputs etc.
+      // the .content-overlay is set to .visible and the active content is
+      // given the class .content-raised
+      z-index: 2000;
+    }
 
+  }
   .menu {
-    // the offcanvas menu is ABOVE ALL...
     z-index: 1500;
   }
-
   .trigger {
-    // ... but the trigger is even higher - content is guaranteed to be below
     z-index: 2500;
   }
 }
@@ -52,12 +48,12 @@
   overflow: hidden;
 
   .menu {
-    // background: #fff;
     position: absolute;
     left: 0;
     top: 0;
     bottom: 0;
     right: 0;
+    cursor: pointer;
   }
 
   .trigger {
@@ -85,7 +81,27 @@
     width: 100%;
     height: 100%;
   }
+
+  .overlay {
+    position: absolute;
+    top: 0;
+    left: -100%; // to cover gap between .menu and .content when offcanvas menu is open
+    width: 200%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.7);
+    transition: opacity $tr2;
+
+    &.clickable {
+      cursor: pointer;
+    }
+  }
+
   // TRANSFORMS, ANIMATIONS
+  .overlay-enter,
+  .overlay-leave-active {
+    opacity: 0 !important;
+  }
+
   .menu {
     transform: translateX(-100%);
   }
@@ -97,7 +113,7 @@
     }
   }
 
-  @media (min-width: #{map-get($grid-breakpoints, xs)}) and (max-width: #{map-get($grid-breakpoints, sm)}) {
+  @include media-breakpoint-up(sm) {
     .menu {
       width: 80%;
     }
@@ -112,11 +128,11 @@
       .trigger {}
 
       .content {
-        transform: translateX(90%);
+        transform: translateX(80%);
       }
     }
   }
-  @media (min-width: #{map-get($grid-breakpoints, sm)}) and (max-width: #{map-get($grid-breakpoints, xl)}) {
+  @include media-breakpoint-only(md) {
     .menu {
       width: 40%;
     }
@@ -135,7 +151,8 @@
       }
     }
   }
-  @media (min-width: #{map-get($grid-breakpoints, xl)}) {
+
+  @include media-breakpoint-up(lg) {
     .menu {
       width: 20%;
     }
@@ -150,27 +167,9 @@
       .trigger {}
 
       .content {
-        transform: translateX(25%);
+        transform: translateX(35%);
       }
     }
   }
 
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(255, 255, 255, 0.7);
-    transition: opacity $tr2;
-
-    &.clickable {
-      cursor: pointer;
-    }
-  }
-
-  .overlay-enter,
-  .overlay-leave-active {
-    opacity: 0 !important;
-  }
 }
